--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Outfit:wght@100..900&display=swap');
-body{
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Outfit:wght@100..900&display=swap");
+body {
   background-color: hsl(180, 52%, 96%);
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-.main-section{
+.main-section {
   width: 100%;
   height: auto;
   display: flex;
@@ -14,7 +14,7 @@ body{
   align-items: center;
   position: relative;
 }
-.header{
+.header {
   width: 100%;
   height: 9.75rem;
   background-image: url(./images/bg-header-desktop.svg);
@@ -28,7 +28,7 @@ body{
   justify-content: center;
   align-items: end;
 }
-.filter-section{
+.filter-section {
   position: absolute;
   width: 70%;
   height: 44px;
@@ -43,7 +43,7 @@ body{
   z-index: 1;
   box-shadow: 0px 8px 8px 0px hsla(180, 15%, 43%, 0.245);
 }
-.added-tags{
+.added-tags {
   width: auto;
   height: auto;
   display: flex;
@@ -52,7 +52,7 @@ body{
   align-items: center;
   column-gap: 1rem;
 }
-.filtertag{
+.filtertag {
   width: fit-content;
   height: auto;
   display: flex;
@@ -60,7 +60,7 @@ body{
   justify-content: start;
   align-items: center;
 }
-.remove-btn{
+.remove-btn {
   width: fit-content;
   max-height: 35.2px;
   padding: 0.5rem 0.75rem 0.5rem 0.75rem;
@@ -73,19 +73,19 @@ body{
   font-weight: 700;
   cursor: pointer;
 }
-.remove-btn:hover{
+.remove-btn:hover {
   background-color: hsl(180, 14%, 20%);
 }
-.clear-btn{
+.clear-btn {
   border: none;
   font-size: 15px;
   color: hsl(180, 29%, 50%);
   text-decoration: underline;
-  font-family:"Outfit", serif;
+  font-family: "Outfit", serif;
   font-weight: 700;
   cursor: pointer;
 }
-.roles-container{
+.roles-container {
   width: 100%;
   height: auto;
   display: flex;
@@ -95,7 +95,7 @@ body{
   row-gap: 2rem;
   padding: 4rem 0 4rem 0;
 }
-.role-card{
+.role-card {
   width: 70%;
   height: auto;
   padding: 2rem 3rem 2rem 3rem;
@@ -107,7 +107,7 @@ body{
   box-shadow: 0px 8px 8px 0px hsla(180, 15%, 43%, 0.245);
   border-radius: 8px;
 }
-.first-part{
+.first-part {
   display: flex;
   width: auto;
   height: auto;
@@ -116,7 +116,7 @@ body{
   justify-content: start;
   align-items: center;
 }
-.role-details{
+.role-details {
   display: flex;
   width: auto;
   height: auto;
@@ -125,7 +125,7 @@ body{
   align-items: start;
   row-gap: 1rem;
 }
-.role-headings{
+.role-headings {
   display: flex;
   width: auto;
   height: auto;
@@ -138,7 +138,7 @@ body{
   font-weight: 700;
   font-family: "Outfit", serif;
 }
-.labels-container{
+.labels-container {
   display: flex;
   width: auto;
   height: auto;
@@ -147,7 +147,7 @@ body{
   align-items: center;
   column-gap: 0.5rem;
 }
-.new-label{
+.new-label {
   width: fit-content;
   height: auto;
   padding: 0.25rem 0.5rem 0.25rem 0.5rem;
@@ -155,11 +155,11 @@ body{
   border-radius: 1rem;
   color: hsl(180, 85%, 95%);
   font-weight: 700;
-  font-family:"Outfit", serif;
+  font-family: "Outfit", serif;
   font-size: 15px;
   align-items: center;
 }
-.featured-label{
+.featured-label {
   width: fit-content;
   height: auto;
   padding: 0.25rem 0.5rem 0.25rem 0.5rem;
@@ -167,11 +167,11 @@ body{
   border-radius: 1rem;
   color: hsl(180, 31%, 95%);
   font-weight: 700;
-  font-family:"Outfit", serif;
+  font-family: "Outfit", serif;
   font-size: 15px;
   align-items: center;
 }
-.position-title{
+.position-title {
   display: flex;
   width: auto;
   height: auto;
@@ -184,19 +184,19 @@ body{
   font-weight: 700;
   font-family: "Outfit", serif;
 }
-.more-details{
+.more-details {
   display: flex;
   width: auto;
   height: auto;
   flex-direction: row;
   column-gap: 1rem;
-  color:hsl(180, 8%, 52%);
+  color: hsl(180, 8%, 52%);
   font-size: 15px;
   font-family: "Outfit", serif;
   font-weight: 500;
   align-items: center;
 }
-.tags{
+.tags {
   display: flex;
   height: auto;
   width: auto;
@@ -205,7 +205,8 @@ body{
   align-items: center;
   column-gap: 1rem;
 }
-.tag{
+
+.tag {
   width: fit-content;
   height: auto;
   color: hsl(180, 29%, 50%);
@@ -218,7 +219,73 @@ body{
   cursor: pointer;
   border: none;
 }
-.tag:hover{
+.tag:hover {
   background-color: hsl(180, 29%, 50%);
   color: hsl(180, 85%, 95%);
+}
+
+@media (max-width: 450px) {
+  .header {
+    width: 100%;
+    height: 9.375rem;
+    background-position: end;
+    background-color: hsl(180, 29%, 50%);
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: end;
+  }
+  .role-card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    width: 75%;
+    padding: 3rem 1rem 3rem 1.5rem;
+    row-gap: 3rem;
+  }
+  .logo-div {
+    position: absolute;
+    width: 75px;
+    height: 75px;
+    margin-top: -6rem;
+  }
+  .roles-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    row-gap: 4rem;
+    padding: 4rem 0 4rem 0;
+  }
+  .tags {
+    display: flexbox;
+    height: auto;
+    width: auto;
+    flex-wrap: wrap;
+  }
+  .position-title {
+    font-size: 1.5rem;
+  }
+  .role-headings {
+    display: flex;
+    width: auto;
+    height: auto;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    column-gap: 1rem;
+    font-size: 1.5rem;
+    color: hsl(180, 29%, 50%);
+    font-weight: 700;
+    font-family: "Outfit", serif;
+  }
+  .first-part {
+    padding-bottom: 1.5rem;
+    border-bottom: 1px hsl(180, 8%, 52%) solid;
+  }
 }
