adjusted font, spacing and image size for mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -244,13 +244,17 @@ body {
     align-items: start;
     width: 75%;
     padding: 3rem 1rem 3rem 1.5rem;
-    row-gap: 3rem;
+    row-gap: 1rem;
   }
   .logo-div {
     position: absolute;
     width: 75px;
     height: 75px;
-    margin-top: -6rem;
+    margin-top: -5rem;
+  }
+  .logo-div img {
+    width: 70px;
+    height: 70px;
   }
   .roles-container {
     width: 100%;
@@ -270,7 +274,7 @@ body {
     row-gap: 1rem;
   }
   .position-title {
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
   .role-headings {
     display: flex;
@@ -280,12 +284,13 @@ body {
     justify-content: start;
     align-items: center;
     column-gap: 1rem;
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: hsl(180, 29%, 50%);
     font-weight: 700;
     font-family: "Outfit", serif;
   }
   .first-part {
+    width: 90%;
     padding-bottom: 1.5rem;
     border-bottom: 1px hsl(180, 8%, 52%) solid;
   }
@@ -303,9 +308,9 @@ body {
     font-size: 0.75rem;
   }
   .new-label {
-    font-size: 8px;
+    font-size: 1rem;
   }
   .featured-label {
-    font-size: 8px;
+    font-size: 1rem;
   }
 }
